# learningrust

./: config.yaml
actix-demo/: Cargo.toml
actix-demo/src/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
advanced_trait/: Cargo.toml
advanced_trait/src/: error_handling.rs  generic_trait.rs  main.rs
algo/: Cargo.toml
algo/src/: quickfind.rs
algorithm/: Cargo.toml
algorithm/src/: binary_tree.rs  double_linkedlist.rs  dynamic_array.rs  graph.rs  linklist.rs  main.rs  skip_list.rs
asderef_demo/: Cargo.toml
asderef_demo/src/: main.rs
asref_demo/: Cargo.toml
asref_demo/src/: main.rs
asycn_await/: Cargo.toml  generated.rs
asycn_await/src/: main.rs  pin.rs
axum_demo/: Cargo.toml
axum_demo/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
axum_demo/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
axum_demo/tests/: quick_dev.rs
barycenter-rs/: Cargo.toml
barycenter-rs/src/: main.rs
borrowing-code-patterns/: Cargo.toml
borrowing-code-patterns/src/: main.rs  split_struct.rs  temporary_variable.rs
buildpattern/: Cargo.toml
buildpattern/src/: main.rs
buildscript_ffi/: Cargo.toml  build.rs
buildscript_ffi/src/: main.rs
burst/: Cargo.toml
burst/src/: lib.rs
bytestream/: Cargo.toml
bytestream/src/: byte_stream.rs  lib.rs
ch09/: Cargo.toml
ch09/src/: main.rs
ch10/: Cargo.toml
ch10/src/: main.rs
ch11/: Cargo.toml
ch11/src/: main.rs
ch13/: Cargo.toml
ch13/src/: main.rs
clousure/: Cargo.toml
clousure/src/: capture.rs  main.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
const_fn/src/: main.rs
covariant_demo/: Cargo.toml
covariant_demo/src/: main.rs
cow_demo/: Cargo.toml
cow_demo/src/: lib.rs
d-linked-list/: Cargo.toml
d-linked-list/src/: lib.rs
declarative_macro/: Cargo.toml
declarative_macro/src/: avec.rs  main.rs
decrusting_tokio/: runtime.md
decrusting_tokio/spawn_channel/: Cargo.toml
delf/: Cargo.toml
delf/src/: lib.rs  parse.rs
designpattern/: Cargo.toml
designpattern/src/: main.rs
dispatch_dynamic/: Cargo.toml
dispatch_dynamic/src/: main.rs
drop_check/: Cargo.toml
drop_check/src/: main.rs
elk/: Cargo.toml
elk/delf/: Cargo.toml
elk/delf/src/: lib.rs  parse.rs
elk/sample/: entry_point  entrypoint.c  hello-pie  hello.asm
encapsulating-lifetime/: Cargo.toml
error_handling/: Cargo.toml
ffi/c_to_rust/: Cargo.toml  build.rs  main.c
ffi/c_to_rust/src/: lib.rs
ffi/example01/: Cargo.toml  Makefile  build.rs  cbindgen.toml
ffi/example01/c_src/: main.c
ffi/example01/include/: header.h
ffi/example01/src/: lib.rs  main.rs
ffi_demo/: Cargo.toml  build.rs  doubler.c  doubler.h  main.c
ffi_demo/src/: main.rs
fn_clousure_traits/: Cargo.toml
format/: Cargo.toml
function/: Cargo.toml
future_demo/: Cargo.toml
gat_demo/: Cargo.toml
global_variable/: Cargo.toml
hecto/: Cargo.toml  test-search.txt
hello-rocket/: Cargo.toml
hello_tonic/: Cargo.toml  build.rs
hello_tonic/src/: client.rs  helloworld.rs  main.rs
helloworld/: Cargo.toml
hpyer-demo/: Cargo.toml
http_client_demo/: Cargo.toml
http_router/: Cargo.toml
hyper-demo/: Cargo.toml
io_demo/: Cargo.toml
iterator_demo/: Cargo.toml
iterator_demo/src/: flatten.rs  main.rs  stepper.rs  stream.rs
libsodium-sys/: Cargo.toml  build.rs
lifetime_demo/: Cargo.toml
lifetime_demo/src/: diff.rs  gbp.rs  hash_ref.rs  hrtb.rs  lifetime.rs  lifetime_hack.rs  main.rs  move.rs  returnimpl.rs  slice.rs  temp.rs  tree.rs
lifetime_demo/unsafe_c_code/: main.c
loan/: Cargo.toml
lockfree/: Cargo.toml
manually_drop/: Cargo.toml
markup_lang/: Cargo.toml
match_pattern/: Cargo.toml
metatdata/: Cargo.toml
mingrep/: Cargo.toml
minigrep/: Cargo.toml
mio_demo/: Cargo.toml
module_demo/: Cargo.toml
monkeylang/: Cargo.toml
mutext_demo/: Cargo.toml
network_programming/: Cargo.toml
nickel-demo/: Cargo.toml
oop_demo/: Cargo.toml
oss_sdk/: Cargo.toml
oss_sdk/src/: auth.rs  bucket.rs  error.rs  main.rs  oss.rs
ownership_demo/: Cargo.toml
phantomdata/: Cargo.toml
procedual_macro_demo/: Cargo.toml
reading_file/: Cargo.toml
result_option/: Cargo.toml
reverseproxy/: Cargo.toml  cert.pem  key.pem
reverseproxy/src/: main.rs
rget/: Cargo.toml
rget/src/: main.rs
rget/src/download/: bar.rs  core.rs  download.rs  mod.rs
ringbuffer/: Cargo.toml
rust-base/: Cargo.toml
rust_arc/: Cargo.toml
rust_atomic/: Cargo.toml
rustinaction/cubesat/: Cargo.toml
rustinaction/cubesat/src/: allocator.rs  cpuemulator.rs  intermut.rs  main.rs  transmut.rs
self_referential/: Cargo.toml
serde-basic/: Cargo.toml
serde-demo/: Cargo.toml  expand.rs  model.json
simulator/: Cargo.toml
socket_pair/: Cargo.toml
sort_float/: Cargo.toml
spin_lock/: Cargo.toml
sqlite_demo/: Cargo.toml
ssh_demo/: Cargo.toml
ssh_demo/examples/: ls.rs
ssh_demo/src/: main.rs
strsplit/: Cargo.toml
structured_data/: Cargo.toml
tailr/: Cargo.toml
tailr/src/: fortune.rs  main.rs
tcp-client/: Cargo.toml
thread_demo/: Cargo.toml
thread_demo/src/: atomic.rs  condvar.rs  main.rs  mutex.rs  rocket.rs  threadlocal.rs
tmpvariable/: Cargo.toml
tokio_async_tcp/: Cargo.toml
tokio_async_tcp/examples/test_client/: main.rs
tokio_async_tcp/src/: main.rs
tower_demo/: Cargo.toml
tower_demo/src/: main.rs
tracing_demo/: Cargo.toml
trust/: Cargo.toml  run.sh
typeandvariable/: Cargo.toml
unit_test/: Cargo.toml
unsafeeuqal/: Cargo.toml
warp_demo/: Cargo.toml
warp_demo/src/: main.rs
webassembly/rustwasmhello/: Cargo.toml
webassembly/rustwasmhello/demo/: index.js  package.json
webassembly/rustwasmhello/src/: lib.rs
webcrawler/: Cargo.toml
where_clause/: Cargo.toml
wordle/: Cargo.toml
workspace/: Cargo.toml
zerotoproduct/: Cargo.toml  config.yaml  default.profraw
zerotoproduct/.cargo/: config.toml
zerotoproduct/scripts/: init_db.sh
zerotoproduct/src/: configuration.rs  domain.rs  main.rs  startup.rs  telemetry.rs
zerotoproduct/src/routes/: health_check.rs  subscriptions.rs
zerotoproduct/tests/: health_check.rs
(+227 files in other folders)
