[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tower-http = {version="0.4.0", features=["fs"]}
thiserror = "1.0.40"
tower-cookies = "0.9.0"
lazy-regex = "2.5.0"
async-trait = "0.1.68"
strum_macros = "0.24.3"
serde_with = "2.3.2"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
