[package]
name = "bytestream"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
futures = "0.3.4"
pin-project = "0.4.8"
tokio = {version = "1.8", features = ["full"]}

