[package]
name = "ffi_demo"
version = "0.1.0"
links = "doubler"
build = "build.rs"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.65"

[build-dependencies]
cc = "1.0"
