[package]
name = "iterator_demo"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
tokio = { version = "1", features = ["full"] }


[[bin]]
name = "stream"
path = "src/stream.rs"
