[package]
name = "lifetime_demo"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

[[bin]]
name = "hashref"
path = "./src/hash_ref.rs"

[[bin]]
name = "diff"
path = "./src/diff.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
