[package]
name = "lifetime_demo"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

[[bin]]
name = "hashref"
path = "./src/hash_ref.rs"

[[bin]]
name = "diff"
path = "./src/diff.rs"

[[bin]]
name = "tree"
path = "./src/tree.rs"

[[bin]]
name = "slice"
path = "./src/slice.rs"

[[bin]]
name = "returnimpl"
path = "./src/returnimpl.rs"

[[bin]]
name = "temp"
path = "./src/temp.rs"
[[bin]]
name = "lifetime_hack"
path = "./src/lifetime_hack.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"

[[bin]]
path = "./src/temp.rs"
name = "temp"

[[bin]]
path = "./src/hrtb.rs"
name = "hrtb"

[[bin]]
path = "./src/move.rs"
name = "move"