[package]
name = "oss_sdk"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json", "stream"]}
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.2", features = ["codec"]}
rust-crypto = "0.2.36"
base64 = "0.11.0"
chrono = "0.4.10"
http = "0.2.0"
quick-xml = "0.17.2"
bytes = "0.5.4"
futures-util = "0.3.4"
