[package]
name = "reverseproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
hyper = {version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }
