[package]
name = "rget"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
indicatif = "0.13.0"
reqwest = "0.9.22"
url = "2.1.0"
console = "0.9.1"
failure = "0.1.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
