[package]
name = "ssh_demo"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio-io = "0.1.13"
ssh2 = { version = "0.8.0", features = ["vendored-openssl"] }

