[package]
name = "tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
num = "0.4.1"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"

[[bin]]
name = "fortune"
path = "src/fortune.rs"
