[package]
name = "tokio_async_tcp"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3.0"
tokio-io = "0.1.13"
tokio-codec = "0.1.2"
