[package]
name = "zerotoproduct"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features=["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.2.1", features=["std","v4"] }
config = "0.13.2"
chrono = "0.4.22"
tracing = {version="0.1", features=["log"]}
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.6"
once_cell = "1.16.0"

[dependencies.sqlx]
version = "0.6.2"
default-feautres = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.12"
