[package]
name = "c_to_rust"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.13.1"


[lib]
crate-type=["cdylib", "staticlib"]
