[package]
name = "example01"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"

[lib]
name = "c_call_rust"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
cbindgen = "0.16.0"
