[package]
name = "cubesat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transmut"
path = "./src/transmut.rs"

[[bin]]
name = "cpu"
path = "./src/cpuemulator.rs"

[[bin]]
name = "alloc"
path = "./src/allocator.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
