[package]
name = "rustwasmhello"
version = "0.1.0"
authors = ["Sean <xujihui1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = {version = "^0.2", features = ["serde-serialize"]}

